k8s/base/vehicle/ingress/vehicle-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parklense-vehicle-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:399600302704:certificate/6eb37406-7e5c-4612-9761-e49fcb1d3bf3"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: "/api/health/"
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/success-codes: "200,302"
    alb.ingress.kubernetes.io/group.name: "parklense-vehicle"
    alb.ingress.kubernetes.io/group.order: "1"
spec:
  rules:
  - host: vehicle.parklensedev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parklense-vehicle-backend-service
            port:
              number: 80
